--- a/package.json
+++ b/package.json
@@ -2,5 +2,30 @@
   "name": "subsclog-functions",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "build": "tsc",
+    "watch": "tsc --watch"
+  },
+  "dependencies": {
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-typescript": "^7.1.0",
+    "firebase-admin": "^6.0.0",
+    "firebase-functions": "^2.0.5",
+    "node-fetch": "^2.2.0",
+    "typescript": "^3.1.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.4",
+    "@types/express": "^4.16.0",
+    "@types/express-graphql": "^0.6.1",
+    "@types/graphql": "^14.0.1",
+    "@types/node-fetch": "^2.1.2",
+    "firebase-tools": "^5.0.1",
+    "prettier": "^1.14.3"
+  }
 }
