--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-typescript": "^7.1.0",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
     "firebase-admin": "^6.0.0",
     "firebase-functions": "^2.0.5",
     "node-fetch": "^2.2.0",
+    "sitemap": "^2.0.1",
     "typescript": "^3.1.1"
   },
   "devDependencies": {
