--- a/package.json
+++ b/package.json
@@ -4,32 +4,32 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "tsc --watch",
-    "build:watch": "tsc --watch"
+    "start": "babel src --out-dir lib --extensions .ts -w"
   },
   "dependencies": {
-    "@babel/cli": "^7.1.2",
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-typescript": "^7.1.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-typescript": "^7.3.3",
+    "@firebase/app-types": "0.x",
     "axios": "^0.18.0",
-    "cors": "^2.8.4",
-    "express": "^4.16.3",
-    "firebase-admin": "^6.0.0",
-    "firebase-functions": "^2.0.5",
-    "node-fetch": "^2.2.0",
-    "sitemap": "^2.0.1",
-    "typescript": "^3.1.1"
+    "firebase-admin": "^7.1.0",
+    "firebase-functions": "^2.2.0",
+    "typescript": "^3.3.3333"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.4",
-    "@types/express": "^4.16.0",
-    "@types/express-graphql": "^0.6.1",
-    "@types/graphql": "^14.0.1",
-    "@types/node-fetch": "^2.1.2",
-    "firebase-tools": "^5.0.1",
-    "prettier": "^1.14.3"
+    "firebase-tools": "^6.5.0",
+    "husky": "^1.3.1",
+    "prettier": "^1.16.4",
+    "pretty-quick": "^1.10.0"
+  },
+  "engines": {
+    "node": "8"
+  },
+  "private": true,
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
