--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,8 @@
 {
   "compilerOptions": {
-    "lib": [
-      "es6",
-      "es2017",
-      "esnext"
-    ],
-    "target": "es6",
+    "esModuleInterop": true,
     "module": "commonjs",
-    "outDir": "lib",
     "strict": true,
-    "allowSyntheticDefaultImports": true
+    "target": "es6"
   }
 }
