--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,14 @@
 {
   "functions": {
     "source": "."
+  },
+  "hosting": {
+    "public": "public",
+    "rewrites": [
+      {
+        "source": "*",
+        "function": "graphql"
+      }
+    ]
   }
 }
