--- a/package.json
+++ b/package.json
@@ -12,16 +12,23 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-typescript": "^7.3.3",
     "@firebase/app-types": "0.x",
+    "apollo-server": "^2.4.8",
+    "apollo-server-cloud-functions": "^2.4.8",
     "axios": "^0.18.0",
     "firebase-admin": "^7.1.0",
     "firebase-functions": "^2.2.0",
+    "nexus": "^0.11.4",
+    "nexus-prisma": "^0.3.5",
+    "prisma": "^1.28.5",
     "typescript": "^3.3.3333"
   },
   "devDependencies": {
     "firebase-tools": "^6.5.0",
     "husky": "^1.3.1",
+    "nexus-prisma-generate": "^0.3.5",
     "prettier": "^1.16.4",
-    "pretty-quick": "^1.10.0"
+    "pretty-quick": "^1.10.0",
+    "prisma-client-lib": "^1.28.3"
   },
   "engines": {
     "node": "8"
