--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-typescript": "^7.3.3",
     "@firebase/app-types": "0.x",
+    "@types/graphql": "^14.0.7",
     "apollo-server": "^2.4.8",
     "apollo-server-cloud-functions": "^2.4.8",
     "axios": "^0.18.0",
