--- a/prisma.yml
+++ b/prisma.yml
@@ -1,4 +1,4 @@
-endpoint: https://subsclog-prisma.now.sh/default/default
+endpoint: https://subsclog.now.sh/default/default
 datamodel: datamodel.prisma
 secret: ${env:SECRET}
 
