--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-typescript": "^7.3.3",
     "@firebase/app-types": "0.x",
+    "@google-cloud/functions-emulator": "^1.0.0-beta.5",
+    "@google-cloud/language": "^2.1.0",
     "@types/graphql": "^14.0.7",
     "apollo-server": "^2.4.8",
     "apollo-server-cloud-functions": "^2.4.8",
     "axios": "^0.18.0",
     "firebase-admin": "^7.1.0",
     "firebase-functions": "^2.2.0",
+    "newsapi": "^2.4.0",
     "nexus": "^0.11.4",
     "nexus-prisma": "^0.3.5",
     "prisma": "^1.28.5",
@@ -32,7 +35,7 @@
     "prisma-client-lib": "^1.28.3"
   },
   "engines": {
-    "node": "8"
+    "node": "6"
   },
   "private": true,
   "husky": {
