--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "esModuleInterop": true,
     "module": "commonjs",
     "strict": true,
-    "target": "es6"
+    "target": "es6",
+    "lib": ["es7"]
   }
 }
