--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "babel src --out-dir lib --extensions .ts -w"
+    "deploy": "firebase deploy --only functions",
+    "prestart": "firebase functions:config:get > .runtimeconfig.json",
+    "start": "firebase serve --only functions",
+    "watch": "babel src --out-dir lib --extensions .ts -w"
   },
   "dependencies": {
     "@babel/cli": "^7.2.3",
@@ -12,7 +15,6 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-typescript": "^7.3.3",
     "@firebase/app-types": "0.x",
-    "@google-cloud/functions-emulator": "^1.0.0-beta.5",
     "@google-cloud/language": "^2.1.0",
     "@types/graphql": "^14.0.7",
     "apollo-server": "^2.4.8",
@@ -20,6 +22,7 @@
     "axios": "^0.18.0",
     "firebase-admin": "^7.1.0",
     "firebase-functions": "^2.2.0",
+    "graphql": "^14.1.1",
     "newsapi": "^2.4.0",
     "nexus": "^0.11.4",
     "nexus-prisma": "^0.3.5",
@@ -32,7 +35,10 @@
     "nexus-prisma-generate": "^0.3.5",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
-    "prisma-client-lib": "^1.28.3"
+    "prisma-client-lib": "^1.29.1"
+  },
+  "optionalDependencies": {
+    "@google-cloud/functions-emulator": "^1.0.0-beta.5"
   },
   "engines": {
     "node": "6"
