--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nexus": "^0.11.4",
     "nexus-prisma": "^0.3.5",
     "prisma": "^1.28.5",
+    "prisma-client-lib": "^1.29.1",
     "typescript": "^3.3.3333"
   },
   "devDependencies": {
@@ -34,8 +35,7 @@
     "husky": "^1.3.1",
     "nexus-prisma-generate": "^0.3.5",
     "prettier": "^1.16.4",
-    "pretty-quick": "^1.10.0",
-    "prisma-client-lib": "^1.29.1"
+    "pretty-quick": "^1.10.0"
   },
   "optionalDependencies": {
     "@google-cloud/functions-emulator": "^1.0.0-beta.5"
