--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,3 @@
 {
-  "presets": [
-    [
-      "@babel/env",
-      {
-        "targets": {
-          "node": 6
-        }
-      }
-    ],
-    "@babel/typescript"
-  ]
+  "presets": [["@babel/env", { "targets": { "node": 6 } }], "@babel/typescript"]
 }
