--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "deploy": "firebase deploy --only functions",
     "prestart": "firebase functions:config:get > .runtimeconfig.json",
     "start": "firebase serve --only functions",
-    "watch": "babel src --out-dir lib --extensions .ts -w"
+    "build:watch": "babel src --out-dir lib --extensions .ts -w"
   },
   "dependencies": {
     "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
     "@babel/preset-typescript": "^7.3.3",
     "@firebase/app-types": "0.x",
     "@google-cloud/language": "^2.1.0",
@@ -20,15 +20,15 @@
     "apollo-server": "^2.4.8",
     "apollo-server-cloud-functions": "^2.4.8",
     "axios": "^0.18.0",
-    "firebase-admin": "^7.1.0",
-    "firebase-functions": "^2.2.0",
+    "firebase-admin": "^7.1.1",
+    "firebase-functions": "^2.2.1",
     "graphql": "^14.1.1",
     "newsapi": "^2.4.0",
-    "nexus": "^0.11.4",
+    "nexus": "^0.11.5",
     "nexus-prisma": "^0.3.5",
-    "prisma": "^1.28.5",
+    "prisma": "^1.29.1",
     "prisma-client-lib": "^1.29.1",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.3.4000"
   },
   "devDependencies": {
     "firebase-tools": "^6.5.0",
