--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,15 @@
 {
-  "presets": [["@babel/env", { "targets": { "node": 6 } }], "@babel/typescript"]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "node": 6
+        },
+        "useBuiltIns": "entry",
+        "corejs": 3
+      }
+    ],
+    "@babel/typescript"
+  ]
 }
