--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.4.0",
+    "@babel/polyfill": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
     "@babel/preset-typescript": "^7.3.3",
     "@firebase/app-types": "0.x",
@@ -20,6 +21,7 @@
     "apollo-server": "^2.4.8",
     "apollo-server-cloud-functions": "^2.4.8",
     "axios": "^0.18.0",
+    "core-js": "3",
     "firebase-admin": "^7.1.1",
     "firebase-functions": "^2.2.1",
     "graphql": "^14.1.1",
